--- a/oscm-subscriptionmgmt/.classpath
+++ b/oscm-subscriptionmgmt/.classpath
@@ -23,14 +23,14 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-dataservice-intsvc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-taskhandling-intsvc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-extsvc-notification"/>
-	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-analyzers-common-5.3.1.jar"/>
-	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-core-5.3.1.jar"/>
-	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/solr-core-5.3.1.jar"/>
-	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/solr-solrj-5.3.1.jar"/>
-	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-queryparser-5.3.1.jar"/>
-	<classpathentry kind="lib" path="/libraries/redhat-hibernate/javalib/hibernate-core-5.0.9.Final.jar"/>
-	<classpathentry kind="lib" path="/libraries/jboss-hibernate-search/javalib/hibernate-search-engine-5.5.4.Final.jar"/>
-	<classpathentry kind="lib" path="/libraries/jboss-hibernate-search/javalib/hibernate-search-orm-5.5.4.Final.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-analyzers-common-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-core-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/solr-core-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/solr-solrj-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-lucene/javalib/lucene-queryparser-5.5.3.jar"/>
+	<classpathentry kind="lib" path="/libraries/redhat-hibernate/javalib/hibernate-core-5.2.6.Final.jar"/>
+	<classpathentry kind="lib" path="/libraries/jboss-hibernate-search/javalib/hibernate-search-engine-5.7.0.Beta2.jar"/>
+	<classpathentry kind="lib" path="/libraries/jboss-hibernate-search/javalib/hibernate-search-orm-5.7.0.Beta2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-auditlog"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-tenantprovisioning"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/oscm-triggerservice"/>
