--- a/oscm-portal/WebContent/WEB-INF/web.xml
+++ b/oscm-portal/WebContent/WEB-INF/web.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright FUJITSU LIMITED 2016-->
- 
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
-  xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-  id="WebApp_ID" version="2.5">
+
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
   <display-name>Business Enablement Services</display-name>
 
@@ -63,7 +65,7 @@
     <param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
     <param-value>-1</param-value>
   </context-param>
-  <context-param> 
+  <context-param>
     <param-name>com.sun.faces.enableRestoreView11Compatibility</param-name>
     <param-value>true</param-value>
   </context-param>
@@ -267,7 +269,7 @@
   <filter-mapping>
     <filter-name>css</filter-name>
     <url-pattern>/public/*</url-pattern>
-  </filter-mapping>  
+  </filter-mapping>
   <filter-mapping>
     <filter-name>IdPResponseFilter</filter-name>
     <url-pattern>/*</url-pattern>
