Added logging info.

--- a/oscm-common/javares/LogMessages.properties
+++ b/oscm-common/javares/LogMessages.properties
@@ -370,7 +370,7 @@
 70020=Users of organization ''{0}'' are not permitted to work with the system
 70021=User is not permitted to work with the system! The user might have been deleted by administrator
 70022=User detail value object is missing in session
-70023=Error formating build date
+70023=Error formating build date ''{0}''
 70024=XML import failed
 70025=Subscription ''{0}'' not active for current user
 70026=Converting {0} to runtime exception because of compatibility reasons
