--- a/oscm-triggerservice/.classpath
+++ b/oscm-triggerservice/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="/libraries/apache-validator/javalib/commons-validator-1.4.0.jar"/>
 	<classpathentry kind="lib" path="/libraries/sun-glassfish-rt31/modules/jersey-client.jar"/>
 	<classpathentry kind="lib" path="/libraries/gson/javalib/gson-2.6.2.jar"/>
+	<classpathentry kind="lib" path="/libraries/apache-codec/javalib/commons-codec-1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
