--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jdk:
 #  - sudo pip install codecov
 install:
   - wget -P libraries/apache-ant-contrib/javalib/ http://central.maven.org/maven2/org/apache/ivy/ivy/2.4.0/ivy-2.4.0.jar
-  - wget -P libraries/apache-ant/ https://www.apache.org/dist/ant/binaries/apache-ant-1.10.1-bin.zip
+  - wget --no-check-certificate -P libraries/apache-ant/ https://www.apache.org/dist/ant/binaries/apache-ant-1.10.1-bin.zip
   - unzip -o -d libraries/apache-ant/ libraries/apache-ant/apache-ant-1.10.1-bin.zip
   - mkdir ../document
   - cd ../document
