--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ jdk:
 #cache:
 #  directories:
 #    - $TRAVIS_BUILD_DIR/libraries
-#before_install:
-#  - sudo pip install codecov
+before_install:
+  - pip install --user codecov
 install:
   - wget -P libraries/apache-ant-contrib/javalib/ http://central.maven.org/maven2/org/apache/ivy/ivy/2.4.0/ivy-2.4.0.jar
   - wget --no-check-certificate -P libraries/apache-ant/ https://www.apache.org/dist/ant/binaries/apache-ant-1.10.1-bin.zip
@@ -23,7 +23,7 @@ env:
     - COMUPTERNAME=travis
     - HOSTNAME=travis
 script:
-  - travis_wait 20 $TRAVIS_BUILD_DIR/libraries/apache-ant/apache-ant-1.10.1/bin/ant -lib $TRAVIS_BUILD_DIR/libraries/apache-ant-contrib/javalib -file $TRAVIS_BUILD_DIR/oscm-build/cruisecontrol.xml runTravisUT
+  - $TRAVIS_BUILD_DIR/libraries/apache-ant/apache-ant-1.10.1/bin/ant -lib $TRAVIS_BUILD_DIR/libraries/apache-ant-contrib/javalib -file $TRAVIS_BUILD_DIR/oscm-build/cruisecontrol.xml runTravisUT
 #  - ant -lib $TRAVIS_BUILD_DIR/libraries/apache-ant-contrib/javalib -file $TRAVIS_BUILD_DIR/oscm-build/cruisecontrol.xml runTravisIT
-#after_success:
-#  - codecov
+after_success:
+  - codecov
